welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: type boolean
var vuBiscuit:boolean = false
              ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
}
^